--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist-ssr
 
 # Editor directories and files
 .vscode/*
+.fleet/*
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -25,3 +26,7 @@ dist-ssr
 
 __pycache__/
 BridgeAPI/storage/
+
+# Cpp builds and debug files
+**/*.dSYM/
+Client/*.out
