--- a/LightDanceClient/package.json
+++ b/LightDanceClient/package.json
@@ -18,13 +18,16 @@
         "@mantine/notifications": "^6.0.11",
         "@tauri-apps/api": "^1.3.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "uuid": "^9.0.0",
+        "zustand": "^4.3.8"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^1.3.0",
         "@types/node": "^18.7.10",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
+        "@types/uuid": "^9.0.1",
         "@vitejs/plugin-react": "^3.0.0",
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.23",
