--- a/LightDanceClient/src-tauri/Cargo.toml
+++ b/LightDanceClient/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "LightDanceClient"
-version = "0.0.0"
-description = "A Tauri App"
+name = "light_dance_client"
+version = "1.0.0"
+description = "Chingshin Academy's Light Dance Manager for the 2023 Shanghai-Taipei Exchange Program"
 authors = ["you"]
 license = ""
 repository = ""
@@ -13,10 +13,11 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["dialog-all", "shell-all"] }
+tauri = { version = "1.3", features = ["dialog-all", "fs-all", "path-all", "shell-all"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 get_if_addrs = "0.5.3"
+open = "1.7.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
