--- a/Bridger/package.json
+++ b/Bridger/package.json
@@ -15,12 +15,14 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "ts-node-dev": "^2.0.0",
+    "uuid": "^9.0.0",
     "ws": "^8.13.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.194",
+    "@types/uuid": "^9.0.1",
     "@types/ws": "^8.5.4",
     "typescript": "^5.0.4"
   }
