--- a/Bridger/package.json
+++ b/Bridger/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "bridger",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
-  "scripts": {
-    "dev": "npx ts-node-dev --respawn --pretty --transpile-only src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "lodash": "^4.17.21",
-    "ts-node-dev": "^2.0.0",
-    "uuid": "^9.0.0",
-    "ws": "^8.13.0",
-    "zod": "^3.21.4"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/lodash": "^4.14.194",
-    "@types/uuid": "^9.0.1",
-    "@types/ws": "^8.5.4",
-    "typescript": "^5.0.4"
-  }
+    "name": "bridger",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.ts",
+    "scripts": {
+        "dev": "npx ts-node-dev --respawn --pretty --transpile-only src/index.ts ",
+        "build": "tsc",
+        "start": "node ./dist/server/index.js",
+        "bundle": "webpack --mode production"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "lodash": "^4.17.21",
+        "ts-node-dev": "^2.0.0",
+        "uuid": "^9.0.0",
+        "ws": "^8.13.0",
+        "zod": "^3.21.4"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.17",
+        "@types/lodash": "^4.14.194",
+        "@types/uuid": "^9.0.1",
+        "@types/ws": "^8.5.4",
+        "ts-loader": "^9.4.3",
+        "typescript": "^5.0.4",
+        "webpack": "^5.87.0",
+        "webpack-cli": "^5.1.4"
+    }
 }
