--- a/LightDanceClient/src-tauri/Cargo.toml
+++ b/LightDanceClient/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = ["dialog-all", "fs-all", "path-all", "shell-all"] }
+tauri = { version = "1.4", features = ["dialog-all", "fs-all", "path-all", "shell-all", "process-command-api"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 get_if_addrs = "0.5.3"
