Bug Fixes & Config Updates
1. Remove Node sidecar and reverted to python scripts instead of executables for performance
2. Force all boards to be calibrated before show can start
3. Resolve bug of failing to delete empty fragments
4. Fix RPiClient missing queue overwrite error
5. Fix RPiClient's issue of failing to properly parse JSON commands

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ dist-ssr
 # Builds
 **/build/
 **/dist/
+**/node-x86_64-apple-darwin
+**/node-aarch64-apple-darwin
 LightDanceClient/src-tauri/resources/bridger/bundle.cjs
 
 __pycache__/
