--- a/LightDanceClient/package.json
+++ b/LightDanceClient/package.json
@@ -22,6 +22,7 @@
         "@mantine/notifications": "^6.0.11",
         "@tauri-apps/api": "^1.4.0",
         "concurrently": "^8.2.0",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "uuid": "^9.0.0",
@@ -30,6 +31,7 @@
     },
     "devDependencies": {
         "@tauri-apps/cli": "^1.4.0",
+        "@types/lodash": "^4.14.195",
         "@types/node": "^18.7.10",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
